# flask-passwords

./: README.md  app.py  pyproject.toml
instance/: config.py
models/: __init__.py  tools.py
routes/: __init__.py  generator.py  index.py
static/js/: generator.js  index.js
templates/: #generator.djhtml#  generator.djhtml  index.djhtml
